# wither

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yaml  release-derive.yaml  release-wither.yaml
docs/: logging.md  migrations-overview.md  model-derive.md  model-sync.md
src/: lib.rs  migration.rs  model.rs
tests/: model.rs  model_integration.rs
tests/fixtures/: mod.rs
wither/: Cargo.toml
wither-derive/: Cargo.toml
wither-derive/src/: lib.rs
wither/docs/: README.md  logging.md  manually-implementing-model.md  migrations-overview.md  model-derive.md  model-sync.md  underlying-driver.md
wither/examples/: README.md  readme.rs
wither/src/: common.rs  cursor.rs  error.rs  lib.rs  migration.rs  model.rs
wither/src/sync/: cursor.rs  migration.rs  mod.rs  model.rs
wither/tests/: model.rs  model_sync.rs
wither/tests/fixtures/: fixture.rs  mod.rs
wither/tests/fixtures/models/: index_stress_test.rs  index_test.rs  mod.rs
wither/tests/fixtures_sync/: mod.rs
wither_derive/: Cargo.toml  README.md
wither_derive/src/: lib.rs  model.rs  model_field.rs  model_struct.rs  msg.rs  tokens.rs
wither_derive/tests/: modelgen.rs  tests.rs
wither_derive/tests/compile-fail/: incorrect-id-serde-attr-value-id.rs  incorrect-id-serde-attr-value-skip.rs  missing-id-field.rs  missing-id-serde-attrs.rs  model-no-fields.rs  struct-attr-collection_name-invalid-type.rs  struct-attr-collection_name-zero-length.rs  struct-attr-missing-serde-derivations.rs  struct-attr-skip_serde_checks-invalid-type.rs  struct-attr-unrecognized.rs
wither_derive/tests/fail/: field-id-incorrect-serde-rename-value.rs  field-id-incorrect-serde-rename-value.stderr  field-id-incorrect-serde-skip-value.rs  field-id-incorrect-serde-skip-value.stderr  field-id-incorrect-type.rs  field-id-incorrect-type.stderr  field-id-missing-serde-attrs.rs  field-id-missing-serde-attrs.stderr  field-id-missing.rs  field-id-missing.stderr  model-attr-invalid.rs  model-attr-invalid.stderr  model-collection-name-zero-length.rs  model-collection-name-zero-length.stderr  model-enum.rs  model-enum.stderr  model-no-fields.rs  model-no-fields.stderr  model-read-concern-invalid-syntax.rs  model-read-concern-invalid-syntax.stderr  model-read-concern-invalid.rs  model-read-concern-invalid.stderr  model-selection-criteria-invalid-fn-path.rs  model-selection-criteria-invalid-fn-path.stderr  model-unrecognized-attr.rs  model-unrecognized-attr.stderr  model-write-concern-ack-invalid.rs  model-write-concern-ack-invalid.stderr
wither_derive/tests/pass/: model-collection-name.rs  model-index.rs  model-read-concern.rs  model-selection-criteria.rs  model-skip-serde-checks.rs  model-write-concern.rs
wither_derive/tests/run-pass/: derive-model.rs
wither_tests/: Cargo.toml
wither_tests/tests/: compiletest.rs  modelgen.rs
wither_tests/tests/compile-fail/: incorrect-id-serde-attr-value-id.rs  incorrect-id-serde-attr-value-skip.rs  missing-id-field.rs  missing-id-serde-attrs.rs  model-no-fields.rs  struct-attr-collection_name-invalid-type.rs  struct-attr-collection_name-zero-length.rs  struct-attr-missing-serde-derivations.rs  struct-attr-unrecognized.rs
wither_tests/tests/run-pass/: derive-model.rs
