[package]
authors = ["Anthony Dodd <Dodd.AnthonyJosiah@gmail.com>"]
name = "wither"
description = "An ODM for MongoDB built upon the mongo rust driver."
version = "0.1.0"
license = "Apache-2.0"
license-file = "LICENSE"
keywords = ["mongodb", "odm", "orm"]
categories = ["database", "data-structures"]
documentation = "https://github.com/thedodd/wither"
homepage = "https://github.com/thedodd/wither"
repository = "https://github.com/thedodd/wither"
exclude = [
    ".git*",
    "target",
    "docker-compose.yml",
    "Dockerfile",
]

[dependencies]
bson = "0.9.0"
mongodb = "0.3.2"
serde = "1.0.11"
serde_derive = "1.0.11"
