[package]
authors = ["Anthony Dodd <Dodd.AnthonyJosiah@gmail.com>"]
categories = ["database", "data-structures"]
description = "An ODM for MongoDB built upon the mongo rust driver."
documentation = "https://github.com/thedodd/wither"
exclude = [".git*", "target", "docker-compose.yml", "Dockerfile"]
homepage = "https://github.com/thedodd/wither"
keywords = ["mongodb", "odm", "orm"]
license = "Apache-2.0"
name = "wither"
readme = "README.md"
repository = "https://github.com/thedodd/wither"
version = "0.5.0"

[dependencies]
bson = "<1.0"
chrono = "<1.0"
log = "<1.0"
mongodb = "<1.0"
serde = "^1.0"
serde_derive = "^1.0"

[dev-dependencies]
lazy_static = "<1.0"
