[package]
authors = ["Anthony Dodd <Dodd.AnthonyJosiah@gmail.com>"]
categories = ["database", "data-structures"]
description = "An ODM for MongoDB built upon the mongo rust driver."
documentation = "https://docs.rs/wither"
homepage = "https://github.com/thedodd/wither"
keywords = ["mongodb", "odm", "orm"]
license = "Apache-2.0"
name = "wither"
readme = "../README.md"
repository = "https://github.com/thedodd/wither"
version = "0.9.0"
edition = "2018"

[dependencies]
bson = "0.14"
chrono = "0.4"
log = "0.4"
mongodb = "0.9.2"
serde = { version="1", features=["derive"] }
wither_derive = { version = "0.9.0", path = "../wither_derive" }

[dev-dependencies]
lazy_static = "1"

[features]
docinclude = [] # Used only for activating `doc(include="...")` on nightly.

[package.metadata.docs.rs]
features = ["docinclude"] # Activate `docinclude` during docs.rs build.
