[package]
authors = ["Anthony Dodd <Dodd.AnthonyJosiah@gmail.com>"]
categories = ["database", "data-structures"]
description = "An ODM for MongoDB built upon the mongo rust driver."
documentation = "https://docs.rs/wither"
homepage = "https://github.com/thedodd/wither"
keywords = ["mongodb", "database", "bson", "nosql", "odm"]
license = "Apache-2.0"
name = "wither"
readme = "../README.md"
repository = "https://github.com/thedodd/wither"
version = "0.9.0"
edition = "2018"

[dependencies]
chrono = "0.4"
log = "0.4"

mongodb = { version = "1", default-features=false, optional=true }
mongodb_beta = { version = "2.0.0-beta.3", default-features=false, optional=true, package="mongodb" }

serde = { version = "1", features=["derive"] }
wither_derive = { version = "0.9.0", path = "../wither_derive", default-features = false }
async-trait = "0.1"
futures = "0.3"
thiserror = "1"

[dev-dependencies]
lazy_static = "1"
tokio = { version = "0.2.18", features = ["macros"] }

[features]
default = ["tokio-runtime"]
tokio-runtime = ["mongodb/tokio-runtime"]
async-std-runtime = ["mongodb/async-std-runtime"]
tokio-beta-runtime = ["mongodb_beta/tokio-runtime"]
async-beta-std-runtime = ["mongodb_beta/async-std-runtime"]
docinclude = [] # Used only for activating `doc(include="...")` on nightly.

[package.metadata.docs.rs]
features = ["docinclude"] # Activate `docinclude` during docs.rs build.
