[package]
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
categories = ["database", "data-structures"]
description = "An ODM for MongoDB built upon the mongo rust driver."
documentation = "https://docs.rs/wither"
homepage = "https://github.com/thedodd/wither"
keywords = ["mongodb", "database", "bson", "nosql", "odm"]
license = "Apache-2.0"
name = "wither_derive"
readme = "README.md"
repository = "https://github.com/thedodd/wither"
version = "0.9.0-alpha.2"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
Inflector = "0.11"
darling = "0.10.2"
proc-macro2 = "1.0.10"
quote = "1.0.3"
serde = { version = "1", features=["derive"] }
syn = { version = "1.0.17", features = ["extra-traits"] }
proc-macro-error = "1.0.2"
async-trait = "0.1.33"

[dev-dependencies]
trybuild = "1.0.27"
wither = { path = "../wither" }
