[package]
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
name = "wither_tests"
version = "0.0.0"

[dependencies]

[dev-dependencies]
bson = "0.12"
compiletest_rs = "0.3"
mongodb = "0.3"
serde = "1"
serde_derive = "1"
wither = { path = "../wither" }
wither_derive = { path = "../wither_derive" }
