[package]
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
name = "wither_tests"
version = "0.0.0"
edition = "2018"

[dependencies]

[dev-dependencies]
bson = "0.14"
compiletest_rs = "0.5"
mongodb = "0.9.2"
serde = { version="1", features=["derive"] }
wither = { path = "../wither" }
wither_derive = { path = "../wither_derive" }
